# emely

./: .gitignore  README.md  TODO.md  emely.py  example_1.ipynb  example_2.ipynb  example_3.ipynb  example_4.ipynb  pyproject.toml
emely/: __init__.py  base.py  fitting.py  folded_gaussian.py  gaussian.py  laplace.py  poisson.py  wrapper.py
examples/: README.md  example_1.ipynb  example_2.ipynb  example_3.ipynb  example_4.ipynb  example_5.ipynb
tests/: README.md  folded_gaussian_1.ipynb  folded_gaussian_2.ipynb  folded_gaussian_3.ipynb  folded_gaussian_4.ipynb  folded_gaussian_5.ipynb  gaussian_1.ipynb  gaussian_2.ipynb  gaussian_3.ipynb  gaussian_4.ipynb  gaussian_5.ipynb  laplace_1.ipynb  laplace_2.ipynb  laplace_3.ipynb  laplace_4.ipynb  laplace_5.ipynb  poisson_1.ipynb  poisson_2.ipynb  poisson_3.ipynb  poisson_4.ipynb  poisson_5.ipynb
