[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emely"
version = "0.2.0"
description = "A lightweight Python package for maximum likelihood estimation (MLE)–based parameter fitting with support for various noise models"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "numdifftools>=0.9.0",
]
license = {text = "MIT"}
authors = [
    {name = "Ediz Herkert", email = "ediz.herkert@icfo.eu"}
]
keywords = ["mle", "maximum-likelihood", "parameter-fitting", "optimization", "scipy"]


[tool.setuptools.packages.find]
where = ["."]
include = ["emely*"]